# o-mRD

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/app/: config.rs  mod.rs
src/download/: mod.rs
src/tray/: mod.rs
